# rix-nb

./: .gitignore  README.md  index.html  package.json  vite.browser.config.js  vite.config.js  vite.live.config.js  web.html
browser-app/: index.html  main.js
examples/export-showcase/: README.md  project.toml
examples/export-showcase/Analysis/: notebook.toml  report.md  slides.md
examples/export-showcase/export/rix-static-export-showcase-export/: _quarto.yml
examples/export-showcase/export/rix-static-export-showcase-export/Analysis/: report.md  report.qmd  slides.html  slides.md  slides.qmd
examples/export-showcase/export/rix-static-export-showcase-export/_site/Analysis/: report.html
scripts/: sync-help.mjs
src/: bundled-plugin-catalog.js  live-runtime.js  main.js  output-latex.js  plugin-catalog-core.js  plugin-catalog.js  project.js  styles.css  tauri-document-store.js  theme.js  theme.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/browser/: browser-document-store.js  browser-document-store.test.js  browser.css  local-notebooks.js  main.js  node-only.js
src/notebook-web/: README.md  contracts.js  rix-engine.js  rix-engine.test.js  workbench.js
