[package]
name = "rix-nb"
version = "0.1.0"
description = "Native macOS Markdown and RiX notebook authoring environment"
authors = ["RatMath contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
